dark mode fix

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ h1  {
   padding-bottom: 0 !important;
   text-transform: lowercase;
   font-family: Inter;
+  font-size: 4vw;
   -webkit-text-stroke: 1px #333333;
   color: transparent !important;
 }
