--- a/src/components/DiplomaComponent.css
+++ b/src/components/DiplomaComponent.css
@@ -4,6 +4,7 @@
 
 .container-diplom {
   margin-top: 80px;
+  width : 100vw;
 }
 
 .section {
